--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
     "jspdf": "^2.3.0",
-    "moment": "^2.29.1",
+    "jspdf-autotable": "^3.5.14",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
