--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.9",
     "node-crc16": "^2.0.7",
+    "node-schedule": "^2.0.0",
     "nodemon": "^2.0.6"
   }
 }
