--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,8 @@
     "jspdf-autotable": "^3.5.14",
     "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-d3-speedometer": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-gauge-chart": "^0.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
